amends column_transformations.yaml

--- a/familiarise_with_data.ipynb
+++ b/familiarise_with_data.ipynb
@@ -19,7 +19,6 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "\n",
     "loan_payments = pd.read_csv('/Users/colinknight/Documents/Data Files/AiCore_EDA_Project/loan_payments.csv')"
    ]
   },
@@ -511,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It appears that there are some columns that are candidated to be converted into dates:\n",
+    "It appears that there are some columns that are candidates to be converted into dates:\n",
     "- issue_date\n",
     "- earliest_credit_line\n",
     "- last_payment_date\n",
@@ -575,12 +574,74 @@
    "source": [
     "### Potential categorical columns\n",
     "\n",
-    "Run checks on the unique values within each potential categorical columns to see if they contain few enough unique values to be considered categories. This also identifies any potential whitespace within values that can be cleaned."
+    "Run checks on the unique values within each potential categorical columns to see if they contain few enough unique values to be considered categories. This also identifies any potential whitespace within values that can be cleaned. First of all I counted the number of unique values in each column to identify where there is a small 'pool' of values within certain dataframes - potential categories. THis identified two additional potential categorical columns: __term__ and __employment_length__."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 54231 unique values in the id column\n",
+      "There are 54231 unique values in the member_id column\n",
+      "There are 1083 unique values in the loan_amount column\n",
+      "There are 1123 unique values in the funded_amount column\n",
+      "There are 5261 unique values in the funded_amount_inv column\n",
+      "There are 3 unique values in the term column\n",
+      "There are 458 unique values in the int_rate column\n",
+      "There are 19940 unique values in the instalment column\n",
+      "There are 7 unique values in the grade column\n",
+      "There are 35 unique values in the sub_grade column\n",
+      "There are 12 unique values in the employment_length column\n",
+      "There are 5 unique values in the home_ownership column\n",
+      "There are 6132 unique values in the annual_inc column\n",
+      "There are 3 unique values in the verification_status column\n",
+      "There are 61 unique values in the issue_date column\n",
+      "There are 9 unique values in the loan_status column\n",
+      "There are 2 unique values in the payment_plan column\n",
+      "There are 14 unique values in the purpose column\n",
+      "There are 3611 unique values in the dti column\n",
+      "There are 16 unique values in the delinq_2yrs column\n",
+      "There are 587 unique values in the earliest_credit_line column\n",
+      "There are 24 unique values in the inq_last_6mths column\n",
+      "There are 101 unique values in the mths_since_last_delinq column\n",
+      "There are 121 unique values in the mths_since_last_record column\n",
+      "There are 48 unique values in the open_accounts column\n",
+      "There are 88 unique values in the total_accounts column\n",
+      "There are 17673 unique values in the out_prncp column\n",
+      "There are 17872 unique values in the out_prncp_inv column\n",
+      "There are 51698 unique values in the total_payment column\n",
+      "There are 51561 unique values in the total_payment_inv column\n",
+      "There are 25117 unique values in the total_rec_prncp column\n",
+      "There are 49331 unique values in the total_rec_int column\n",
+      "There are 1439 unique values in the total_rec_late_fee column\n",
+      "There are 3599 unique values in the recoveries column\n",
+      "There are 2944 unique values in the collection_recovery_fee column\n",
+      "There are 99 unique values in the last_payment_date column\n",
+      "There are 38235 unique values in the last_payment_amount column\n",
+      "There are 97 unique values in the next_payment_date column\n",
+      "There are 102 unique values in the last_credit_pull_date column\n",
+      "There are 6 unique values in the collections_12_mths_ex_med column\n",
+      "There are 114 unique values in the mths_since_last_major_derog column\n",
+      "There are 1 unique values in the policy_code column\n",
+      "There are 1 unique values in the application_type column\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in loan_payments.columns:\n",
+    "    unique_values = len(loan_payments[col].unique())\n",
+    "    print(f'There are {unique_values} unique values in the {col} column')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -616,6 +677,29 @@
       "E     4072\n",
       "F     1694\n",
       "G      521\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Unique values in term\n",
+      "term\n",
+      "36 months    35845\n",
+      "60 months    13614\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "\n",
+      "Unique values in employment_length\n",
+      "employment_length\n",
+      "10+ years    15907\n",
+      "2 years       5066\n",
+      "< 1 year      5034\n",
+      "3 years       4589\n",
+      "5 years       3836\n",
+      "1 year        3708\n",
+      "4 years       3482\n",
+      "6 years       3059\n",
+      "7 years       2964\n",
+      "8 years       2537\n",
+      "9 years       1931\n",
       "Name: count, dtype: int64\n",
       "\n",
       "\n",
@@ -733,10 +817,12 @@
     }
    ],
    "source": [
-    "# create list of potential category columns\n",
+    "# create list of potential category columns based on previous output\n",
     "categorical_list = ['policy_code',\n",
     "                    'loan_status', \n",
-    "                    'grade', \n",
+    "                    'grade',\n",
+    "                    'term',\n",
+    "                    'employment_length', \n",
     "                    'sub_grade', \n",
     "                    'home_ownership', \n",
     "                    'verification_status', \n",
@@ -777,7 +863,14 @@
     "\n",
     "- __purpose__ appears to have values that can be combined such as 'credit_card' and 'debt_consolidation' as well as 'house' and 'home_improvement' (or moving in this case)\n",
     "\n",
-    "- There do not appear to be any whitespace issues with any of the values in the columns in 'categorical_list'\n"
+    "- There do not appear to be any whitespace issues with any of the values in the columns in 'categorical_list'\n",
+    "\n",
+    "- __term__ has only two values: '36 MONTHS' and '60 MONTHS'. The ' MONTHS' can be removed\n",
+    "\n",
+    "- __employment_length__ differentiates between employment lengths on a one year basis up to 10 years where it simply records over +10 years above this. This might need to be grouped into buckets to treat the other employment lengths in a similar manner. Since this only refers to years we can remove reference to 'year' or years within the data.\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
